trunk/Archive2/36/28688ee1f66fd8/output
main.cpp:17:25: error: reference to type 'const int *const [1]' could not bind to an lvalue of type 'int *[1]'
    int const * const (&why)[1] = ptrarr;
                        ^         ~~~~~~
1 error generated.
